tests/ui/pattern/usefulness/issue-40221.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-40221.rs:11:11
   |
LL |     match proto {
   |           ^^^^^ pattern `P::C(PC::QA)` not covered
   |
note: `P` defined here
  --> $DIR/issue-40221.rs:1:6
   |
LL | enum P {
   |      ^
LL |     C(PC),
   |     - not covered
   = note: the matched value is of type `P`
help: ensure that all possible cases are being handled by adding an arm to handle the `P::C(PC::QA)` case
   |
LL ~         P::C(PC::Q) => (),
LL +         P::C(PC::QA) => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
